--- a/Documents/bp_sirljan_2012/3_analyza.tex
+++ b/Documents/bp_sirljan_2012/3_analyza.tex
@@ -15,7 +15,7 @@ Při řešení vlastního návrhu na model řízení přístupových práv jsem 
 
 \subsubsection{Obecné řešení}
 Obecným řešením je držet si tabulku, kde ve sloupcích budou objekty, ke kterým je možno přistupovat a v řádcích jsou přistupující. V poli pak jsou hodnoty boolean, které vyjadřují buď allow nebo deny. Příklad tabulkového řešení je v tabulce \ref{tab:tab2}.
-
+TODO prelozit do cestiny
 \begin{table}%[h]
 \centering
 %% Some packages, such as MDW tools, offer better commands for making tables
@@ -85,7 +85,7 @@ V ukázkové třídě API je výčet všech potřebných metod, které RubyACL p
 
 
 
-\subsubsection{Aplikace > RubyACL}
+\subsubsection{Rozhraní mezi Ruby-ACL a uživatelskou aplikací}
 Jedná se o výčet public metod třídy RubyACL.
 ...přidat výčet
 Na této části záleží bezpočenost. Potencionálně nebezpečné místo k útoku.
