--- a/Documents/bp_sirljan_2012/reference.bib
+++ b/Documents/bp_sirljan_2012/reference.bib
@@ -11,3 +11,21 @@
   title  = "{phpGACL} --- Generic Access Control List with PHP",
   note   = "\\ \verb|phpgacl.sourceforge.net/manual.pdf|, stav z 15.\,5.\,2012",
 }
+
+@Book{UML,
+  author =      "Martin Fowler",
+  title =        "Destilované UML",
+  publisher =    "Grada Publishing",
+  edition =      "1st",
+  year   = 2010,
+  note =	"In Czech",
+}
+
+@Book{Ruby,
+  author =      "Hal Fulton",
+  title =        "RUBY, kompendium znalostí",
+  publisher =    "Zoner Press",
+  edition =      "1st",
+  year   = 2010,
+  note =	"In Czech",
+}
